--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 
 <body>
@@ -213,6 +214,13 @@
                     <button class="tab-button" onclick="openTab('tab-comparacion')">Comparación Detallada</button>
                 </div>
                 <div class="tab-content active" id="tab-amortizacion">
+                    <div
+                        style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
+                        <h4 style="margin: 0;">Tabla de Amortización</h4>
+                        <button class="btn-excel" onclick="exportarAExcel()" title="Exportar a Excel">
+                            <i class="fa-solid fa-file-excel"></i> Exportar a Excel
+                        </button>
+                    </div>
                     <div id="tablaAmortizacion"></div>
                 </div>
                 <div class="tab-content" id="tab-comparacion">
