--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Panel Financiero - Préstamos</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.umd.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="reset-variables.css">
+    <link rel="stylesheet" href="layout-components.css">
+    <link rel="stylesheet" href="cards-metrics.css">
+    <link rel="stylesheet" href="forms-tables.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
