--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
                         <div class="metrica-value" id="tea">0%</div>
                         <div class="metrica-comp" id="teaComp"></div>
                     </div>
-                    <!-- <div class="metrica-item">
+                    <div class="metrica-item">
                         <div class="metrica-label">CFTEA (CFT Efectivo Anual)</div>
                         <div class="metrica-value" id="cftea">0%</div>
                         <div class="metrica-comp" id="cfteaComp"></div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
