--- a/index.html
+++ b/index.html
@@ -125,20 +125,21 @@
                         <div class="metrica-comp" id="cftComp"></div>
                     </div>
                     <div class="metrica-item">
-                        <div class="metrica-label">CFTNA (CFT Nominal Anual)</div>
-                        <div class="metrica-value" id="cftna">0%</div>
-                        <div class="metrica-comp" id="cftnaComp"></div>
+                        <div class="metrica-label">CFTEA (CFT Efectivo Anual)</div>
+                        <div class="metrica-value" id="cftea">0%</div>
+                        <div class="metrica-comp" id="cfteaComp"></div>
                     </div>
                     <div class="metrica-item">
                         <div class="metrica-label">TEA (Tasa Efectiva Anual)</div>
                         <div class="metrica-value" id="tea">0%</div>
                         <div class="metrica-comp" id="teaComp"></div>
                     </div>
-                    <div class="metrica-item">
-                        <div class="metrica-label">CFTEA (CFT Efectivo Anual)</div>
-                        <div class="metrica-value" id="cftea">0%</div>
-                        <div class="metrica-comp" id="cfteaComp"></div>
-                    </div>
+
+                    <!-- <div class="metrica-item">
+                        <div class="metrica-label">CFTNA (CFT Nominal Anual)</div>
+                        <div class="metrica-value" id="cftna">0%</div>
+                        <div class="metrica-comp" id="cftnaComp"></div>
+                    </div> -->
                 </div>
             </div>
         </div>
