--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="kpi-card pink">
                     <div class="kpi-label">Monto Total a Pagar</div>
                     <div class="kpi-value" id="totalPagar">$0</div>
-                    <div class="kpi-subtitle" id="totalPagarComp"></div>
+                    <!-- <div class="kpi-subtitle" id="totalPagarComp"></div> -->
                     <div class="kpi-icon"><i class="fa-solid fa-money-bill-wave"></i></div>
                 </div>
                 <div class="kpi-card purple">
